src/app/nav/nav.component.scss
header {
    position: relative;
    z-index: 5;

    @media screen and (max-width: 960px){
        width: 100%;
        height: 4rem;
    }

    .icon {
        position: inherit;
        padding: 5px;
        width: 4rem;
        height: 4rem;
        display: none;
        cursor: pointer;
        top: -4rem;
        transform: translateY(100%);
        transition: transform var(--time) ease-in;

        &.open{
            transform: translateY(-100%);
        }

        @media screen and (max-width: 960px){
            display: block;
        }
    }

    menu {
        display: flex;
        justify-content: flex-end;
        align-items: center;
        height: var(--menu-height);
        font-size: 3rem;
        font-weight: 300;

        @media screen and (max-width: 960px){
            justify-content: flex-start;
            background-color: rgba(0,0,0,.5);
        }

        @media screen and (max-width: 960px){
            transform: translateY(-150%);
            transition: transform var(--time) ease-in;

            &.open {
                position: relative;
                display: flex;
                justify-content: space-around;
                transform: translateY(0);
                top: -4rem;
            }
        }
    }

    li {
        padding: 2rem;
        margin-left: 1px;
        text-align: center;
        color: white;
        width: var(--menu-item-width);
        background-color: black;
        opacity: 0.4;
        transition: all var(--time) ease-in;

        @media screen and (max-width: 960px){
            display: flex;
            padding: 0;
            height: 100%;
            justify-content: center;
            align-items: center;
            opacity: 0.9;
            background-color: transparent;
        }

        &.active {
            color: var(--color-2);
            background-color: white;
            box-shadow: 2px 0 10px 0 rgba(0,0,0,0.45);
            opacity: 1;
        }

        @media screen and (min-width: 960px){

            &:hover{
                transform: translateY(-1rem);
                color: black;
                opacity: 1;
                background-color: rgba(255,255,255,0.7);
            }
        }
    }

}

